<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.zigzag.whar.ui.profileEdit.ProfileEditActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:fitsSystemWindows="true">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:src="@drawable/logo"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="13dp" />

    </android.support.v7.widget.Toolbar>

    <ImageView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:src="@drawable/buildings_outline"
        android:tint="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/tv_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/update_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:fontFamily="sans-serif-bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:src="@mipmap/avatar"
        app:civ_border_color="@color/colorPrimaryDark"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_update_profile" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_input_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.18"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/cl_name_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/first_name"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_first_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:ems="5"
                    android:gravity="start"
                    android:inputType="textCapWords"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:hint="@string/last_name"
                app:layout_constraintStart_toEndOf="@+id/til_first_name"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.AppCompatEditText
                    android:id="@+id/et_last_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="5"
                    android:gravity="start"
                    android:maxLines="1"
                    android:inputType="textCapWords"
                    android:singleLine="true"
                    android:textSize="22sp"
                    android:textStyle="bold"/>
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:hint="@string/date_of_birth_placeholder"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/cl_name_container"
            app:layout_constraintTop_toBottomOf="@+id/cl_name_container">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/et_dob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:ems="6"
                android:focusable="false"
                android:gravity="start"
                android:maxLines="1"
                android:singleLine="true"
                android:textSize="22sp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>
    </android.support.constraint.ConstraintLayout>


    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/btn_submit"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_button_shape"
        android:text="@string/update"
        android:textColor="@android:color/white"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_input_container"
        app:spinning_bar_color="@android:color/white"
        app:spinning_bar_padding="6dp"
        app:spinning_bar_width="4dp" />

</android.support.constraint.ConstraintLayout>
