...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_otp_msg">

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/s_country_code"
            style="@style/CountrySpinnerStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="1dp"
            android:gravity="center_horizontal"/>

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/et_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:hint="@string/phone_number"
            android:inputType="number"
            android:textSize="20sp"/>
...
