<resources>
    <string name="app_name">Whar</string>
    <string name="phone_number">Phone number</string>
    <string name="get_code">Get Code</string>
    <string name="verify_your_number">Verify your number</string>
    <string name="enter_code">Enter verification code</string>
    <string name="invalid_phone_number">Invalid Phone Number</string>
    <string name="verify">Verify</string>
    <string name="otp_message">We will send you an SMS with a verification code.\n Standard carrier charges may apply</string>
    <string name="code_message">We have sent a verification code to your number</string>
    <string name="tap_to_edit">%1$s (Tap to edit)</string>
    <string name="resend_code">Resend code</string>
    <string name="invalid_code">The verification code entered was invalid</string>
    <string name="update_profile">Update Profile</string>
    <string name="update">Update</string>
    <string name="display_name_placeholder">Your Name</string>
    <string name="date_of_birth_placeholder">Date of birth</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_permission">No Permission</string>
    <string name="request_location_permission">We require your device location permission to display your nearby feeds.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="logout">Logout</string>
    <string name="send">Send</string>
    <string name="code_resent">Code resent</string>

</resources>
