...
            <com.zigzag.whar.customviews.NonSwipeableViewPager
                android:id="@+id/vp_container"
                android:layout_width="wrap_content"
                android:layout_height="150dp" />

            <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
                android:id="@+id/btn_submit"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
...
